package com.politicanegocio.core.model;

public enum DocumentAction {
    VIEW,
    EDIT,
    DELETE
}
