package com.politicanegocio.core.model;

public enum ProcessInstanceStatus {
    ACTIVE,
    COMPLETED,
    CANCELLED
}
