package com.politicanegocio.core.model;

public enum TaskInstanceStatus {
    PENDING,
    IN_PROGRESS,
    COMPLETED,
    REJECTED
}
