@startuml
title Modelo Conceptual Actualizado - Plataforma iBPMS SW1_EX1

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho
skinparam class {
  BackgroundColor #FFFFFF
  BorderColor #444444
  ArrowColor #444444
}

hide methods

' =========================================================
' Colecciones principales
' =========================================================

class Company <<collection>> {
  +id
  +name
  +createdBy
}

class User <<collection>> {
  +id
  +username
  +password
  +roles[]
  +company
  +parentCompany
  +area
  +laneId
  +fcmToken
  +fcmTokenUpdatedAt
}

class Area <<collection>> {
  +id
  +name
  +company
}

class Policy <<collection>> {
  +id
  +name
  +description
  +diagramJson
  +startLaneId
  +companyId
  +companyName
  +createdBy
  +createdAt
  +updatedAt
}

class ProcessInstance <<collection>> {
  +id
  +policyId
  +title
  +description
  +status
  +startedBy
  +startedAt
  +completedAt
}

class TaskInstance <<collection>> {
  +id
  +processInstanceId
  +taskId
  +laneId
  +status
  +assignedTo
  +formData
  +createdAt
  +startedAt
  +completedAt
}

class DocumentRecord <<collection>> {
  +id
  +processInstanceId
  +policyId
  +clientId
  +documentCode
  +fileName
  +contentType
  +size
  +s3Key
  +createdBy
  +createdAt
  +updatedAt
}

class DocumentPermission <<collection>> {
  +id
  +documentId
  +userId
  +username
  +company
  +canView
  +canEdit
  +canDelete
  +updatedBy
  +updatedAt
}

class DocumentAuditLog <<collection>> {
  +id
  +username
  +userId
  +action
  +documentId
  +processInstanceId
  +httpMethod
  +path
  +timestamp
}

class CopilotConversation <<collection>> {
  +id
  +ownerUsername
  +company
  +policyId
  +policyName
  +createdAt
  +updatedAt
}

' =========================================================
' Objetos embebidos o conceptuales
' =========================================================

class Lane <<embedded>> {
  +id
  +name
  +color
  +x
  +width
  +height
}

class PolicyInitialRequirement <<embedded>> {
  +id
  +name
  +description
  +required
  +allowedExtensions[]
}

class CopilotMessage <<embedded>> {
  +role
  +text
  +timestamp
  +suggestedActions[]
}

' Node y Edge no se persisten como colecciones; forman parte del diagramJson.
class Node <<diagramJson>> {
  +id
  +type
  +laneId
  +label
  +formSchema
  +x
  +y
}

class Edge <<diagramJson>> {
  +id
  +sourceNodeId
  +targetNodeId
  +condition
  +manualX
  +manualY
  +offX1
  +offY1
  +offX2
  +offY2
}

' =========================================================
' Enumeraciones
' =========================================================

enum ProcessInstanceStatus <<enum>> {
  ACTIVE
  COMPLETED
  CANCELLED
}

enum TaskInstanceStatus <<enum>> {
  PENDING
  IN_PROGRESS
  COMPLETED
  REJECTED
}

enum DocumentAction <<enum>> {
  VIEW
  EDIT
  DELETE
}

' =========================================================
' Relaciones de empresa y administración
' =========================================================

Company "1" -- "0..*" User : agrupa >
Company "1" -- "0..*" Area : define >
Company "1" -- "0..*" Policy : publica >

Area "1" -- "0..*" User : asigna >

' =========================================================
' Relaciones BPMN y ejecución
' =========================================================

Policy "1" *-- "0..*" Lane : contiene
Policy "1" *-- "0..*" PolicyInitialRequirement : solicita
Policy "1" *-- "0..*" Node : define en diagramJson
Policy "1" *-- "0..*" Edge : conecta en diagramJson

Policy "1" -- "0..*" ProcessInstance : instancia >
ProcessInstance "1" -- "0..*" TaskInstance : genera >

ProcessInstance --> ProcessInstanceStatus : usa
TaskInstance --> TaskInstanceStatus : usa

User "1" -- "0..*" ProcessInstance : inicia >
User "0..1" -- "0..*" TaskInstance : atiende >
Lane "1" -- "0..*" TaskInstance : enruta >

' =========================================================
' Relaciones de Gestión Documental DMS
' =========================================================

ProcessInstance "1" -- "0..*" DocumentRecord : contiene >
Policy "1" -- "0..*" DocumentRecord : clasifica >
User "1" -- "0..*" DocumentRecord : sube >

DocumentRecord "1" -- "0..*" DocumentPermission : autoriza >
DocumentRecord "1" -- "0..*" DocumentAuditLog : audita >
User "1" -- "0..*" DocumentPermission : recibe >
User "1" -- "0..*" DocumentAuditLog : ejecuta >

DocumentAuditLog --> DocumentAction : usa

' =========================================================
' Relaciones Copilot IA
' =========================================================

User "1" -- "0..*" CopilotConversation : posee >
Policy "0..1" -- "0..*" CopilotConversation : contextualiza >
CopilotConversation "1" *-- "0..*" CopilotMessage : contiene

' =========================================================
' Notas
' =========================================================

note right of DocumentRecord
  Archivo físico en S3:
  clientes/{clientId}/tramites/{processInstanceId}/{documentId}_{fileName}
end note

note bottom of PolicyInitialRequirement
  Requisitos iniciales definidos por el administrador
  antes de que el cliente inicie el trámite móvil.
end note

note bottom of DocumentPermission
  Permisos granulares:
  ver, editar y eliminar documento.
end note

@enduml
